using UnityEngine;

public class Constantes : MonoBehaviour
{
    public const string Level = "Level";
    public const string StrCountLevel = "CountLevel";
    public const string StrCountMoney = "Money";
    public const string StrMove = "Move";
    public const string StrMoveJoystic = "MoveJoystic";
    public const string StrDance = "Dance";
    public const string StrTutorialScene = "Tutorial";
    public const string StrMainMenuScene = "Main Menu";
    public const string StrFinish = "Finish";
    public const string StrMusic = "Music";
    public const string StrSelectedScin = "SelectedScin";
    public const string StrTutorial = "Tutorial";
    public const string Language = "Language";
}
