using UnityEngine;

public class Constants : MonoBehaviour
{
    public const string StrCountLevel = "CountLevel";
    public const string StrCountMoney = "Money";
    public const string StrMove = "Move";
    public const string StrMoveJoystic = "MoveJoystic";
    public const string StrDance = "Dance";
    public const string StrTutorialScene = "Tutorial";
    public const string StrMainMenuScene = "Main_Menu";
    public const string StrShopScene = "Shop";
    public const string StrFinish = "Finish";
    public const string StrMusic = "Music";
    public const string StrSfx = "Sfx";
    public const string StrSelectedSkin = "ChosenSkin";
    public const string StrTutorial = "Tutorial";
    public const string Language = "Language";
}